--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -59,10 +59,12 @@
                 
               </div>
               <div class="col-sm-4">
-            <!-- Button trigger modal -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                发货
-              </button>
+                <%= link_to my_order_deliveries_path(order_id: order.id) , method: :post, data: {confirm: "你确定吗？"} do%>
+                  <button type="button" class="btn btn-primary" style="width: 4rem;">
+                    发货
+                  </button>
+                <% end %>
+                
                 </div>
             </div>
           </li>
@@ -71,32 +73,6 @@
       <div style="height:20px"> </div>
     </div>
 
-    
-
   <% end %>
   
-</div>
-
-<!-- Button trigger modal -->
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
 </div>
